data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_416.wast
;; 7. **Test Description 7:**    - Implement a `loop` that uses `br` to a deeply nested label intended to exit the loop, but due to an invalid input type for the loop, it causes continuous repetition.    - **Constraint: Operand Stack Management**    - **Relation to Infinite Loop:** Invalid input types prevent loop exit.

(assert_invalid
  (module
    (func $type-loop-invalid-input
      (block
        (loop (result i32)
          (i32.const 0)
          (block (result i32)
            (i32.const 1)
            (br 1)
          )
          (i32.add)
          (br 0)
        )
      )
    )
  )
  "type mismatch"
)